--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,31 +1,25 @@
 html,
-body {
-  position: fixed;
-  top: 0;
-  left: 0;
-  margin: 0;
-  width: 100vw;
-  height: 100%;
-  overflow: hidden;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
-
+body,
 #root {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
+  margin: 0;
+  width: 100%;
   height: 100%;
-  overflow: hidden;
-  background-color: var(--var-bg-color-gray);
-  font-family: Avenir, Helvetica, Arial, sans-serif;
+  padding: 0;
+  font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html.dark {
+  background: #121212;
+  color: white;
+}
+
+body {
+  @apply overflow-y-scroll overflow-x-hidden;
+}
+
+body.dark::-webkit-scrollbar {
+  color: rgba(229, 231, 235, 1);
 }
