feat: add `prettier-plugin-tailwindcss` && formatting code

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,7 +31,7 @@ html.dark {
 }
 
 body {
-  @apply overflow-y-scroll overflow-x-hidden;
+  @apply overflow-x-hidden overflow-y-scroll;
 }
 
 body.dark::-webkit-scrollbar {
